<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">João Gabriel Sonalio</string>
    <string name="nav_header_subtitle">20230040008@estudantes.ifpr.edu.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings2">Settings 2</string>
    <string name="action_settings1">Settings 1</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todos_os_convidados">Todos os comentarios</string>
    <string name="menu_all_guests">Todos os comentarios</string>
    <string name="menu_present">Comentarios Positivos</string>
    <string name="menu_absent">Comentarios Negativos</string>
    <string name="nomeTime">Nome do Time</string>
    <string name="OpcaoDoTime">Escolha a Opção que mais representa o time:</string>
    <string name="TemMundial">Esse time tem Mundial!</string>
    <string name="NaoTemMundial">Esse time não tem Mundial!</string>
    <string name="JaRebaixado">Esse time já foi rebaixado</string>
    <string name="NuncaRebaixado">Esse time nunca foi rebaixado</string>
    <string name="enviar">Enviar</string>
    <string name="Gostei">Gostei!</string>
    <string name="NaoGostei">Não Gostei</string>
    <string name="Avaliacao">Avaliação</string>
    <string name="Nome">Nome</string>
    <string name="comentario">Comentario</string>
</resources>